crates/tych/src/tests/snapshots/cond_bad_cond_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 295
expression: "(test[1], res)"
---
- "\nfn foo() {\n    if 1.0 {\n        1\n    }\n}\n"
- Err: Conditional should always be a bool

