crates/tych/src/tests/snapshots/cond_basic.snap
---
source: crates/tych/src/tests.rs
assertion_line: 292
expression: "(test[1], res)"
---
- "\nfn foo() {\n    if 1 > 2 {\n        1\n    } else {\n        2\n    }\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Cond:
                          cond_expr:
                            kind:
                              BinOp:
                                op: Gt
                                lhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int32: 1
                                      ty: Int32
                                rhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                ty: Bool
                          then_block:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Lit:
                                        value:
                                          Int32: 1
                                        ty: Int32
                                ty: Int32
                          else_block:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Lit:
                                        value:
                                          Int32: 2
                                        ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32

