crates/tych/src/tests/snapshots/def_func_basic.snap
---
source: crates/tych/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo() {\n    1\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Lit:
                          value:
                            Int32: 1
                          ty: Int32
                  ty: Int32

