crates/tych/src/tests/snapshots/def_func_expected_int_last_stmt_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 391
expression: "(test[1], res)"
---
- "\nfn foo(a: int, b: float) -> int { }\n"
- Err: "function `main::foo` should return type `int32` but last statement is `void`"

