crates/tych/src/tests/snapshots/def_func_multi_args.snap
---
source: crates/tych/src/tests.rs
assertion_line: 391
expression: "(test[1], res)"
---
- "\nfn foo(a: int, b: float) { }\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              params:
                - - a
                  - Int32
                - - b
                  - Float
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list: []
                  ty: Void

