crates/tych/src/tests/snapshots/def_func_void_ret_expr_body.snap
---
source: crates/tych/src/tests.rs
assertion_line: 391
expression: "(test[1], res)"
---
- "\nfn foo(a: int) {\n    a + 1\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              params:
                - - a
                  - Int32
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              Ident:
                                name: a
                                ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Int32
                  ty: Int32

