crates/tych/src/tests/snapshots/for_basic.snap
---
source: crates/tych/src/tests.rs
assertion_line: 497
expression: "(test[1], res)"
---
- "\nfn foo() {\n    for x: int8 = 1; x < 2; 1 {\n        x\n    }\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: "main::foo"
              params: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        For:
                          start_name: x
                          start_antn: Int8
                          start_expr:
                            kind:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          cond_expr:
                            kind:
                              BinOp:
                                op: Lt
                                lhs:
                                  kind:
                                    Ident:
                                      name: x
                                      ty: Int8
                                rhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int8: 2
                                      ty: Int8
                                ty: Bool
                          step_expr:
                            kind:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                          body:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Ident:
                                        name: x
                                        ty: Int8
                                ty: Int8
                  ty: Void

